# platform.core.system.power-manager

./: AUTHORS  CMakeLists.txt  main.c  pm_battery.c  pm_battery.h  pm_conf.c  pm_conf.h  pm_core.c  pm_core.h  pm_device_plugin.c  pm_device_plugin.h  pm_key_filter.c  pm_llinterface.c  pm_llinterface.h  pm_lsensor.c  pm_poll.c  pm_poll.h  pm_setting.c  pm_setting.h  pm_x_lcd_onoff.c  pmctrl.in  power_manager.sh  project.config  util.c  util.h
debian/: changelog  control  power-manager-bin.install.in  power-manager-bin.postinst.in  rules
packaging/: power-manager.changes  power-manager.manifest  power-manager.service  power-manager.spec
pm_event/: CMakeLists.txt  pm_event.c
udev-rules/: 91-power-manager.rules.in
